[package]
name = "aircraftwar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", feature = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
futures-util = "0.3.30"
